Closed Bug 1234820 Opened 9 years ago Closed 8 years ago

[CID 1242807][CID 221940] missing break in switch

Categories

(NSS :: Libraries, defect)

defect
Not set
normal

Tracking

(firefox46 affected)

RESOLVED FIXED
Tracking Status
firefox46 --- affected

People

(Reporter: franziskus, Assigned: franziskus)

References

(Blocks 1 open bug)

Details

(Keywords: coverity, Whiteboard: CID1242807,CID221940)

Attachments

(1 file)

secutil.c:SECU_displayVerifyLog is missing break statements (which is also identified by the unused variable bug by coverity).
Assignee: nobody → franziskuskiefer
Attached patch Bug1234820.patchSplinter Review
added break to assign correct errorstring
Attachment #8701458 - Flags: review?(martin.thomson)
Comment on attachment 8701458 [details] [diff] [review]
Bug1234820.patch

Review of attachment 8701458 [details] [diff] [review]:
-----------------------------------------------------------------

Not enough context, sorry.
Attachment #8701458 - Flags: review?(martin.thomson)
put it on rietveld: https://codereview.appspot.com/284100043

the outer switch statement is missing any breaks here. This shouldn't be a problem because none of the inner switch statements should be triggered, but errstr will be set again in SEC_ERROR_EXPIRED_ISSUER_CERTIFICATE.
Flags: needinfo?(martin.thomson)
Comment on attachment 8701458 [details] [diff] [review]
Bug1234820.patch

Review of attachment 8701458 [details] [diff] [review]:
-----------------------------------------------------------------

Surprising that these generate complaints.

https://hg.mozilla.org/projects/nss/rev/3a4d9ab3f52f
Attachment #8701458 - Flags: review+
Attachment #8701458 - Flags: checked-in+
Status: NEW → RESOLVED
Closed: 8 years ago
Flags: needinfo?(martin.thomson)
Resolution: --- → FIXED
Target Milestone: --- → 3.22
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: