Bug 1234820 - [CID 1242807][CID 221940] missing break in switch, r=mt

--HG--
extra : histedit_source : 4adb84ab30574e13598d8f8bf3215414f3f1641c